k8s/dev/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: payloadapi-dev
  labels:
    name: payloadapi-dev
    environment: dev
